2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: New test to cover all RTEMS POSIX
	functions that return ENOSYS.
	* psxenosys/.cvsignore, psxenosys/Makefile.am, psxenosys/init.c,
	psxenosys/psxenosys.scn, psxenosys/system.h: New files.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx13/test.c: Fix spelling error.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxtime/test.c: Add tests for adjtime().

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* psxbarrier01/psxbarrier01.scn, psxbarrier01/test.c,
	psxrwlock01/psxrwlock01.scn, psxrwlock01/test.c: Added several test
	cases to improve test coverage.

2007-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1262/filesystem
	* Makefile.am, configure.ac, include/pmacros.h: Add support for readv()
	and writev() including documentation and test case.
	* psxrdwrv/.cvsignore, psxrdwrv/Makefile.am, psxrdwrv/main.c,
	psxrdwrv/psxrdwrv.scn, psxrdwrv/test.c: New files.

2007-05-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsem01/init.c, psxsem01/psxsem01.scn, psxtimer/psxtimer.c,
	psxtimer/psxtimer.scn: Add optional managers to Makefiles. Clean up
	test cases so last output line follows END OF pattern. Make sure test
	case all run. All tests appeared ok on sis.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Adjust test to account for nanosleep()
	behavior more closely matching GNU/Linux.

2006-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxrwlock01/main.c, psxrwlock01/test.c: Improve rwlock test to
	include normal blocking and unblocking on timeout.

2006-12-02	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-17	Joel Sherrill <joel@OARcorp.com>

	* psxsem01/init.c: Account for change in POSIX semaphore time handling.
	Previously the timeout was not absolute time and checked BEFORE
	attempting to lock semaphore.

2006-11-15	Joel Sherrill <joel.sherrill@oarcorp.com>
