@@ -2,8 +2,8 @@
 Init: uname - EFAULT (invalid uts pointer argument)
 Init: uts.sysname: RTEMS
 Init: uts.nodename: Node 1
-Init: uts.release: 4.7.99.1
-Init: uts.version:
+Init: uts.release: 4.8.99.0
+Init: uts.version: 
 Init: uts.machine: SPARC/w/FPU
 Init: clock_gettime - EINVAL (invalid clockid)
 Init: clock_settime - EINVAL (invalid clockid)
@@ -20,11 +20,13 @@ Fri May 24 11:05:03 1996
 Init: seconds remaining (0)
 Init: nanosleep - EINVAL (NULL time)
 Init: nanosleep - EINVAL (too many nanoseconds)
-Init: nanosleep - negative seconds small delay
+Init: nanosleep - negative seconds small delay 
 Init: nanosleep - yield
-Init: nanosleep - 3.05 seconds
+Init: nanosleep - 1.05 seconds
 Fri May 24 11:05:06 1996
 Init: sec (0), nsec (0) remaining
+Init: usleep - 1.35 seconds
+Fri May 24 11:05:07 1996
 Init: ID is 0x0b010001
 Init: sched_get_priority_min (SCHED_FIFO) -- 1
 Init: sched_get_priority_min -- EINVAL (invalid policy)
